# gdls_star

./: CMakeLists.txt  README.md
cmake/: Findpybind11.cmake  Pybind11.CmakeLists.txt.in
src/gdls_star/: camera_feature_correspondence_2d_3d.h  estimate_similarity_transformation.cc  estimate_similarity_transformation.h  estimate_similarity_transformation_test.cc  gdls_star.cc  gdls_star.h  gdls_star_robust_estimator.cc  gdls_star_robust_estimator.h  gdls_star_test.cc  pinhole_camera.cc  pinhole_camera.h  pinhole_camera_test.cc  util.cc  util.h
src/math/: alignment.h  gauss_jordan.h  utils.h
src/python/: pybind.cc
src/upnp/: build_upnp_action_matrix_using_symmetry.cc  build_upnp_action_matrix_using_symmetry.h
test/: test_main.cc
